# my-ai-app

./: .coverage  pyproject.toml  requirements.txt
app/: main.py
app/core/: chunker.py  embeddings.py  llm.py  prompts.py  rag.py  utils.py
app/db/: vector_store.py
data/: sample_doc.md
evals/: harness.py  test_sentiment.py
scripts/: practice_chunking.py  practice_pgvector.py  practice_rag.py  test_llm.py
tests/: conftest.py  test_api.py  test_chunker.py  test_embeddings.py  test_prompts.py  test_rag.py  test_utils.py  test_vector_store.py
